--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5,6 +5,10 @@ en:
         settings_heading: ActivityPub
         enable: Enable ActivityPub in this category.
         show_status: Show an ActivityPub status label in this category.
+        username: ActivityPub username for this category.
+        username_description: unique, no spaces, cannot be changed.
+        handle: ActivityPub handle for this category.
+        handle_description: Used to follow this category on services using Webfinger (e.g. Mastodon).
     discourse_activity_pub:
       status:
         title:
