--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -79,3 +79,4 @@ en:
     activity_pub_require_signed_requests: "Require ActivityPub requests to be signed with HTTP signatures."
     activity_pub_allowed_request_domains: "List of domains allowed to make ActivityPub requests."
     activity_pub_blocked_request_domains: "List of domains not allowed to make ActivityPub requests."
+    activity_pub_delivery_delay_minutes: "Number of minutes to delay delivery of ActivityPub activities."
