--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -59,9 +59,9 @@ en:
         cant_resolve_actor: "Could not resolve actor"
         actor_not_supported: "Actor is not supported"
         cant_create_actor: "Could not create actor"
-        object_not_valid: "Object is not valid"
+        cant_find_object: "Could not find object"
+        object_not_ready: "Object is not ready"
         activity_not_supported: "Activity is not supported for actor and object"
-        activity_not_available: "Activity is not available for object"
     activity:
       reject:
         actor_already_following: "Actor is already following that object"
