Add published_at support and frontend badge

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -19,7 +19,12 @@ en:
           model_not_ready: ActivityPub is not ready for this %{model_type}
           model_not_active: ActivityPub is not active for this %{model_type}
           model_active:
-            first_post: New posts in %{model_name} are federated to its followers
+            first_post: New posts in %{model_name} are federated %{delay_minutes} minutes after being posted
         label:
           active: Active
           not_active: Not Active
+    post:
+      discourse_activity_pub:
+        title:
+          was_published: "Post was published at %{time}"
+          scheduled_to_be_published: "Post scheduled to be published at %{time}"
