Add disabled restore for published AP posts

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -28,3 +28,5 @@ en:
         title:
           was_published: "Post was published at %{time}"
           scheduled_to_be_published: "Post scheduled to be published at %{time}"
+        restore:
+          not_supported: "Restore is not currently supported for published AcitivtyPub posts."
