--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4,7 +4,9 @@ en:
       discourse_activity_pub:
         settings_heading: ActivityPub
         enable: Enable ActivityPub in this category.
+        enable_description: Site settings 'activity pub enabled' and 'login required' also affect whether ActivityPub is active.
         show_status: Show an ActivityPub status label in this category.
+        show_status_description: Shows in the composer when creating a post that will be published with ActivityPub.
         username: ActivityPub username for this category.
         username_description: unique, no spaces, cannot be changed.
         handle: ActivityPub handle for this category.
