--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -76,12 +76,16 @@ en:
         not_enabled: "Webfinger is not enabled"
         resource_not_supported: "Resource not supported"
         resource_not_found: "Resource not found"
+    object:
+      note:
+        link_to_forum: Discuss this on our forum.
 
   site_settings:
     activity_pub_enabled: "Enable ActivityPub plugin."
     activity_pub_rate_limit_post_to_inbox_per_minute: "Number of POST requests that can be made to an actor's inbox per minute."
     activity_pub_rate_limit_get_objects_per_minute: "Number of GET requests that can be made on AcitivityPub objects per minute."
     activity_pub_note_excerpt_maxlength: "Maximum length of post excerpts in AcitivityPub Notes."
+    activity_pub_note_link_to_forum: "Include a link to this forum in ActivityPub notes."
     activity_pub_require_signed_requests: "Require ActivityPub requests to be signed with HTTP signatures."
     activity_pub_allowed_request_origins: "List of domains allowed to make ActivityPub requests."
     activity_pub_blocked_request_origins: "List of domains not allowed to make ActivityPub requests."
