--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -17,6 +17,8 @@ en:
         name_description: Used as a display name on some services (e.g. Mastodon).
         default_visibility: ActivityPub visibility for this category.
         default_visibility_description: All posts will be published via ActivityPub with this visibility.
+        post_object_type: ActivityPub type to publish posts in this category as.
+        post_object_type_description: Use Note for short content (e.g. Mastodon) and Article for long content.
     discourse_activity_pub:
       status:
         title:
@@ -40,6 +42,13 @@ en:
         description:
           private: ActivityPub Note is addressed to followers
           public: ActivityPub Note is publicly addressed
+      post_object_type:
+        note:
+          label: Note
+          description: Best for microblogging platforms (e.g. Mastodon).
+        article:
+          label: Article
+          description: Best for longform platforms (e.g. Lemmy).
     post:
       discourse_activity_pub:
         title:
