--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -19,6 +19,8 @@ en:
         default_visibility_description: All posts will be published via ActivityPub with this visibility.
         post_object_type: ActivityPub type to publish posts in this category as.
         post_object_type_description: Use Note for short content (e.g. Mastodon) and Article for long content.
+        publication_type: ActivityPub publication type
+        publication_type_description: First Post publishes the first post in each topic. Full Topic published all posts and ingests replies.
     discourse_activity_pub:
       status:
         title:
@@ -49,6 +51,13 @@ en:
         article:
           label: Article
           description: Best for longform platforms (e.g. Lemmy).
+      publication_type:
+        first_post:
+          label: First Post
+          description: First post of every topic in this category is published via ActivityPub.
+        full_topic:
+          label: Full Topic
+          description: Every post of every topic in this category is published via ActivityPub and replies on other ActivityPub servers are imported as replies.
     post:
       discourse_activity_pub:
         title:
