--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -15,8 +15,8 @@ en:
         handle_description: Used to follow this category on services using Webfinger (e.g. Mastodon).
         name: ActivityPub name for this category.
         name_description: Used as a display name on some services (e.g. Mastodon).
-        default_visibility: Default visibility for posts published via ActivityPub in this category.
-        default_visibility_description: If the ActivityPub status is not shown in composer, all posts will be published via ActivityPub with this visibility.
+        default_visibility: ActivityPub visibility for this category.
+        default_visibility_description: All posts will be published via ActivityPub with this visibility.
     discourse_activity_pub:
       status:
         title:
@@ -34,12 +34,12 @@ en:
       discovery:
         description: Follow %{category_name} on services that support ActivityPub using
       visibility:
-        private:
-          label: Followers Only
-          description: ActivityPub Note is addressed to followers
-        public:
-          label: Public
-          description: ActivityPub Note is publicly addressed
+        label:
+          private: Followers Only
+          public: Public
+        description:
+          private: ActivityPub Note is addressed to followers
+          public: ActivityPub Note is publicly addressed
     post:
       discourse_activity_pub:
         title:
