--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -24,6 +24,7 @@ en:
         enable_without_username: An ActivityPub username is required to enable ActivityPub.
         no_change_when_set: An ActivityPub username can't be changed once set.
         username_taken: "That username is already taken on this server."
+        full_topic_must_be_public: "Full topic publication requires public publication."
 
   post:
     discourse_activity_pub:
