--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -42,8 +42,8 @@ en:
           private: Followers Only
           public: Public
         description:
-          private: ActivityPub Note is addressed to followers
-          public: ActivityPub Note is publicly addressed
+          private: "%{object_type} is addressed to followers."
+          public: "%{object_type} is publicly addressed."
       post_object_type:
         note:
           label: Note
@@ -61,8 +61,12 @@ en:
     post:
       discourse_activity_pub:
         title:
-          published: "Post was published via ActivityPub at %{time}"
-          scheduled: "Post is scheduled to be published via ActivityPub at %{time}"
-          scheduled_past: "Post was scheduled to be published via ActivityPub at %{time}"
-          deleted: "ActivityPub note was deleted at %{time}"
-          updated: "Post was updated via ActivityPub at %{time}"
+          published: "%{object_type} was published from this site at %{time}."
+          scheduled: "%{object_type} is scheduled to be published from this site at %{time}."
+          scheduled_past: "%{object_type} was scheduled to be published from this site at %{time}."
+          deleted: "%{object_type} was deleted at %{time}."
+          updated: "%{object_type} was updated at %{time}."
+          published_remote: "%{object_type} was published from %{domain} at %{time}."
+        info:
+          title: "ActivityPub for Post #%{post_number}"
+          url: Original %{object_type} on %{domain}.
