--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -91,6 +91,11 @@ en:
     object:
       note:
         link_to_forum: Discuss this on our forum.
+    actor:
+      followers:
+        summary: "%{actor}'s followers"
+      outbox:
+        summary: "%{actor}'s activities"
   site_settings:
     activity_pub_enabled: "Enable ActivityPub plugin."
     activity_pub_rate_limit_post_to_inbox_per_minute: "Number of POST requests that can be made to an actor's inbox per minute."
