Move to Auth module and add controllers

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -100,6 +100,12 @@ en:
         summary: "%{actor}'s followers"
       outbox:
         summary: "%{actor}'s activities"
+    auth:
+      error:
+        not_enabled: "ActivityPub Auth is not enabled"
+        invalid_oauth_domain: "Invalid ActivityPub OAuth domain"
+        oauth_session_expired: "ActivityPub OAuth session expired"
+        failed_to_authorize: "ActivityPub OAuth failed to authorize"
   site_settings:
     activity_pub_enabled: "Enable ActivityPub plugin."
     activity_pub_rate_limit_post_to_inbox_per_minute: "Number of POST requests that can be made to an actor's inbox per minute."
