Add "via ActivityPub" to ActivityPub post indicator titles

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -61,12 +61,12 @@ en:
     post:
       discourse_activity_pub:
         title:
-          published: "%{object_type} was published from this site at %{time}."
-          scheduled: "%{object_type} is scheduled to be published from this site at %{time}."
-          scheduled_past: "%{object_type} was scheduled to be published from this site at %{time}."
-          deleted: "%{object_type} was deleted at %{time}."
-          updated: "%{object_type} was updated at %{time}."
-          published_remote: "%{object_type} was published from %{domain} at %{time}."
+          published: "%{object_type} was published via ActivityPub from this site at %{time}."
+          scheduled: "%{object_type} is scheduled to be published via ActivityPub from this site at %{time}."
+          scheduled_past: "%{object_type} was scheduled to be published via ActivityPub from this site at %{time}."
+          deleted: "%{object_type} was deleted via ActivityPub at %{time}."
+          updated: "%{object_type} was updated via ActivityPub at %{time}."
+          published_remote: "%{object_type} was published via ActivityPub from %{domain} at %{time}."
         info:
           title: "ActivityPub for Post #%{post_number}"
           url: Original %{object_type} on %{domain}.
