--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -70,3 +70,22 @@ en:
         info:
           title: "ActivityPub for Post #%{post_number}"
           url: Original %{object_type} on %{domain}.
+    user:
+      discourse_activity_pub:
+        title: ActivityPub
+        authorize_account:
+          title: Authorize Account
+          description: Authorize an account to associate its activities on this Discourse with your user account.
+          placeholder: Enter a domain
+          instructions: "e.g. mastodon.social"
+        clear_domain_button:
+          title: Clear domain.
+        verify_domain_button:
+          label: Verify
+          title: Verify the domain where you will authorize an account.
+        authorize_account_button:
+          label: Authorize
+          title: Authorize an account on the domain.
+        authorized_accounts:
+          title: Authorized Accounts
+          description: Activities attributed to these accounts on this Discourse will be associated with your user account.
