--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -19,6 +19,8 @@ en:
         default_visibility_description: All posts will be published via ActivityPub with this visibility.
         post_object_type: ActivityPub type to publish posts in this category as.
         post_object_type_description: Use Note for short content (e.g. Mastodon) and Article for long content.
+        publication_type: ActivityPub publication type.
+        publication_type_description: First Post publishes the first post in each topic. Full Topic publishes all posts and ingests replies.
     discourse_activity_pub:
       status:
         title:
@@ -40,8 +42,8 @@ en:
           private: Followers Only
           public: Public
         description:
-          private: ActivityPub Note is addressed to followers
-          public: ActivityPub Note is publicly addressed
+          private: "%{object_type} is addressed to followers."
+          public: "%{object_type} is publicly addressed."
       post_object_type:
         label:
           note: Note
@@ -49,11 +51,22 @@ en:
         description:
           note: Best for microblogging platforms (e.g. Mastodon).
           article: Best for longform platforms (e.g. Lemmy).
+      publication_type:
+        label:
+          first_post: First Post
+          full_topic: Full Topic
+        description:
+          first_post: First post of every topic in this category is published via ActivityPub.
+          full_topic: Every post of every topic in this category is published via ActivityPub and replies on other ActivityPub servers are imported as replies in Discourse.
     post:
       discourse_activity_pub:
         title:
-          published: "Post was published via ActivityPub at %{time}"
-          scheduled: "Post is scheduled to be published via ActivityPub at %{time}"
-          scheduled_past: "Post was scheduled to be published via ActivityPub at %{time}"
-          deleted: "ActivityPub note was deleted at %{time}"
-          updated: "Post was updated via ActivityPub at %{time}"
+          published: "%{object_type} was published via ActivityPub from this site at %{time}."
+          scheduled: "%{object_type} is scheduled to be published via ActivityPub from this site at %{time}."
+          scheduled_past: "%{object_type} was scheduled to be published via ActivityPub from this site at %{time}."
+          deleted: "%{object_type} was deleted via ActivityPub at %{time}."
+          updated: "%{object_type} was updated via ActivityPub at %{time}."
+          published_remote: "%{object_type} was published via ActivityPub from %{domain} at %{time}."
+        info:
+          title: "ActivityPub for Post #%{post_number}"
+          url: Original %{object_type} on %{domain}.
