Add OAuth Authorization (#24)

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -76,3 +76,24 @@ en:
         unschedule:
           label: Unschedule Publish
           title: Unschedule post to be published via ActivityPub.
+    user:
+      discourse_activity_pub:
+        title: ActivityPub
+        authorize:
+          title: Authorize
+          description: Authorize an account on another domain to associate its activities with your user.
+          placeholder: Enter a domain
+          instructions: "e.g. mastodon.social"
+        clear_domain_button:
+          title: Clear domain.
+        verify_domain_button:
+          label: Verify
+          title: Verify the domain where you will authorize an account.
+        authorize_button:
+          label: Authorize
+          title: Authorize an account on the domain.
+        authorizations:
+          title: Authorizations
+          description: Activities of these accounts will be associated with your user.
+        authorization:
+          confirm_remove: Are you sure you want to remove the authorization for %{actor_id}?
